Trying to fix extra scrollbar bug

--- a/css/main.scss
+++ b/css/main.scss
@@ -189,7 +189,6 @@ blockquote {
 
 #notes {
   padding: 5% 7.5%;
-  overflow-y: scroll;
   margin: 0 auto;
   width: 59%;
 
